<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.Inventario.ConteosPausa.Pausa"
    android:minWidth="700dp"
    android:minHeight="450dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView58">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="670dp"
            android:layout_height="wrap_content"
            android:background="#3949AB"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView63"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/total_DP"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/fecha_DP"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/material_DP"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario_DP"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conteosrecycler"
            android:layout_width="670dp"
            android:layout_height="330dp"
            android:fadingEdge="horizontal|vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/titulo_DP"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/instrucciones_titulo_DP"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/actualizar_pausa" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="185dp"
        android:layout_height="151dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/instrucciones_DP"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/atras_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/atras_DP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/actualizar_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/botonrecargar_DP"
        app:icon="@drawable/recuargar"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>