<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajustedeinventario_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/material_AI"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/almacenajuste"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/materialajuste"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:text="@string/fecha_AI"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView48"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fechaajuste"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/contadortag"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="10dp"
        android:text="@string/almacen_AI"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView39"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/materialajuste"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="625dp"
        android:layout_height="360dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialajuste">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_AI"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_AI"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion_AI"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevaubicacion_AI" />

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/estado_I"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerajustesdeinventario"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#64DD17"
        android:onClick="aclaracion"
        android:text="@string/botonterminar_I"
        android:textSize="18sp"
        app:icon="@drawable/correcto"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="10dp"
        android:text="@string/codigosdisponible_AI"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contadortag"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/faltanteajuste"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="10dp"
        android:text="@string/faltatotal_AI"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/faltanteajuste"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/almacenajuste"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/fechaajuste">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_AI" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_AI" />

                <TextView
                    android:id="@+id/textView49"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion_AI" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclertag"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:onClick="asignacionautomaticatag"
        android:text="@string/verificartag_M"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>