<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:minWidth="500dp"
    android:minHeight="270dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elegir_DF"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/codigo_M"
                app:endIconMode="clear_text"
                app:helperText="Ingrese el codigo deseado">



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codigomaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <ImageButton
                    android:id="@+id/escogermaterialscanner"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#00FFFFFF"
                    app:srcCompat="@drawable/camarasimple" />

            </LinearLayout>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/aceptar_CD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptarB_DF" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="210dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cerrados_DF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cerrados_DF"
                app:icon="@drawable/correcto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/atras_DF"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atras_DF" />

            <Space
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/pausai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pausa_DF"
                app:icon="@drawable/pausa" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView66"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>